--- a/Back/package.json
+++ b/Back/package.json
@@ -12,6 +12,7 @@
   "author": "Wallan Mota",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.0",
