--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.0",
     "prop-types": "^15.7.2",
+    "sequelize": "^6.6.5",
     "swagger-ui": "^3.52.0",
     "swagger-ui-express": "^4.1.6"
   },
