--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pacote para backend projeto jobsnet",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon ./index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "busca"
@@ -16,8 +17,10 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.0",
+    "netlify-lambda": "^2.0.14",
     "prop-types": "^15.7.2",
     "sequelize": "^6.6.5",
+    "serverless-http": "^2.7.0",
     "swagger-ui": "^3.52.0",
     "swagger-ui-express": "^4.1.6"
   },
