--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pacote para backend projeto jobsnet",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "busca"
